feat: 기물 이동 기능 구현
- 기존 move 메서드 활용
- 그 외 public 메서드 가독성을 위한 라인 변경
- 테스트 케이스 작성